# CodeGeni

./: .codegeni.yaml  .editorconfig  .gitignore  BRANDING.md  BRAND_LOGO_UPDATE.md  CodeGeni.md  Dockerfile.sandbox  INSTALL_EXTENSION.md  README.md  codegeni.agent.json  docker-compose.yml  package.json  playwright.config.ts  pyproject.toml  tsconfig.base.json
Docs/: PLAN_by_Codex.md  claude_like_coding_agent.md  codegeni_ui_plan.md  first_plan.md  saas_readiness.md
assets/: README.md
extensions/vscode-codegeni/: ICON_README.md  codegeni-0.0.1.vsix  create_brand_assets.py  create_icon_from_brand.py  package-lock.json  package.json  resize_icon.py  tsconfig.json  update-brand-icon.sh
extensions/vscode-codegeni/media/: chatPanel.js
extensions/vscode-codegeni/src/: extension.ts
extensions/vscode-codegeni/src/chat/: chatService.ts  mcpClient.ts  types.ts  webviewProvider.ts
extensions/vscode-codegeni/src/test/: runTest.ts
extensions/vscode-codegeni/src/test/suite/: chatService.test.ts  extension.test.ts  index.ts
extensions/vscode-codegeni/test-fixtures/simple-workspace/: README.md
src/codegeni/: __init__.py  cli.py  config.py  models.py  runner.py  server.py
src/codegeni/analyzers/: __init__.py  base.py  python_ast.py
src/codegeni/subproc/: __init__.py  bandit_runner.py  flake8_runner.py  pylint_runner.py  radon_runner.py
tests/: test_runner.py
tests/playwright/: brain-api.spec.ts  mcp-contract.spec.ts  vscode-extension.spec.ts
tests/playwright/helpers/: workspace.ts
